syntax = "proto3";

package cloud.filibuster.examples;

message PurchaseRequest {
  string session_id = 1;
}

message PurchaseResponse {
  bool success = 1;
}

service APIService {
  rpc Hello (HelloRequest) returns (HelloReply) {};
  rpc HelloWithMock (HelloRequest) returns (HelloReply) {};
  rpc RedisHello (RedisRequest) returns (RedisReply) {};
  rpc Purchase (PurchaseRequest) returns (PurchaseResponse) {}
}

message GetUserRequest {
  string session_id = 1;
}

message GetUserResponse {
  string user_id = 1;
}

service UserService {
  rpc GetUserFromSession (GetUserRequest) returns (GetUserResponse) {}
}

service HelloService {
  rpc Hello (HelloRequest) returns (HelloReply) {}
  rpc PartialHello (HelloRequest) returns (HelloReply) {}
  rpc PartialHelloWithErrorHandling (HelloRequest) returns (HelloReply) {}
  rpc PartialHelloExternalGrpc (HelloRequest) returns (HelloReply) {}
  rpc PartialHelloExternalHttp (HelloRequest) returns (HelloReply) {}
  rpc ParallelPartialHello (HelloRequest) returns (HelloReply) {}
  rpc ParallelSynchronousPartialHello (HelloRequest) returns (HelloReply) {}
  rpc LazyHello (HelloRequest) returns (HelloReply) {}
  rpc BlockingHello (HelloRequest) returns (HelloReply) {}
  rpc LotsOfReplies (HelloRequest) returns (stream HelloReply) {}
  rpc LotsOfGreetings (stream HelloRequest) returns (HelloReply) {}
  rpc BidiHello (stream HelloRequest) returns (stream HelloReply) {}
  rpc Unimplemented (HelloRequest) returns (HelloReply) {}
  rpc SmellyRedundantRPC (HelloRequest) returns (HelloReply) {}
  rpc SmellyUnimplementedFailures (HelloRequest) returns (HelloReply) {}
  rpc SmellyResponseBecomesRequest (HelloRequest) returns (HelloReply) {}
  rpc SmellyMultipleInvocationsForIndividualMutations (HelloRequest) returns (HelloReply) {}
  rpc CompositionalHello (HelloExtendedRequest) returns (HelloExtendedReply) {}
  rpc SimplePartialHello (HelloRequest) returns (HelloReply) {}
  rpc ThrowException (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message HelloExtendedRequest {
  string name = 1;
}

message HelloExtendedReply {
  // contains name, directly mapped through.
  string name = 1;

  // contains part of the name, should form a partial match on the argument.
  string first_message = 2;

  // contains nothing from the response.
  string second_message = 3;

  // contains a random datetime.
  string created_at = 4;
}

service WorldService {
  rpc World (WorldRequest) returns (WorldReply) {}
  rpc WorldUnimplemented (WorldRequest) returns (WorldReply) {}
  rpc WorldExternalHttp (WorldRequest) returns (WorldReply) {}
  rpc WorldExternalGrpc (WorldRequest) returns (WorldReply) {}
  rpc WorldRandom (WorldRequest) returns (WorldReply) {}
}

message WorldRequest {
  string name = 1;
}

message WorldReply {
  string message = 1;
}

message RedisRequest {
  string key = 1;
}

message RedisReply {
  string value = 1;
}